# agentive-lotion-2

./: .env.template  .pre-commit-config.yaml  README.md  SETUP.md  project  pyproject.toml
.adversarial/: config.yml
.adversarial/docs/: EVALUATION-WORKFLOW.md
.agent-context/: 2025-11-27-ARCHITECTURAL-VISION.md  2025-11-27-PHASE-1-TASK-BREAKDOWN.md  2025-11-27-SESSION-HANDOVER.md  2025-11-27-SYSTEM-COMPONENTS-DATA-FLOW.md  AL2-0001-HANDOFF-feature-developer.md  ONBOARDING-STATE.md  agent-handoffs.json  current-state.json
.claude/agents/: AGENT-TEMPLATE.md  agent-creator.md  canvas-architect.md  ci-checker.md  document-reviewer.md  feature-developer.md  interaction-designer.md  knowledge-graph.md  onboarding.md  pdf-processor.md  planner.md  powertest-runner.md  rem.md  security-reviewer.md  test-runner.md  tycho.md
.github/workflows/: ci.yml  sync-to-linear.yml
.serena/: setup-serena.sh
agents/: launch  onboarding  preflight
delegation/tasks/2-todo/: AL2-0001-ci-cd-tdd-setup.md  AL2-0002-python-backend-foundation.md  AL2-0003-typescript-frontend-foundation.md  AL2-0004-json-storage-infrastructure.md  AL2-0005-vision-service-abstraction.md  ASK-0001-pyproject-toml.md  ASK-0003-gh-cli-default-repo.md  ASK-0005-linear-sync-infrastructure.md
delegation/tasks/5-done/: AL2-0001-ci-cd-tdd-setup.md  ASK-0002-pre-commit-fixes.md  ASK-0004-scripts-directory.md
docs/: TESTING.md
docs/decisions/adr/: ADR-0001-starter-kit-improvements.md  ADR-0001-system-prompt-size-considerations.md  ADR-0002-python-backend-typescript-frontend.md  ADR-0003-json-filesystem-storage.md  ADR-0004-claude-vision-local-hooks.md  ADR-0005-tldraw-composition-over-fork.md  ADR-0006-band-based-quality-metrics.md  (+1 more)
scripts/: linear_sync_utils.py  show-conflict.sh  sync_tasks_to_linear.py  verify-ci.sh  verify-setup.sh
tests/: test_linear_sync.py  test_smoke.py
(+1 files in other folders)
