[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# No Python packages yet - will be added in Phase 1 when backend/ is created
packages = []

[project]
name = "agentive-lotion-2"
version = "0.1.0"
description = "PDF to interactive canvas tool using TLdraw"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "anthropic>=0.18.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For FastAPI testing
    "black>=23.12.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (>1s runtime, deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
    "unit: fast unit tests (default)",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E203"]  # W503 is not a valid ruff rule

[tool.coverage.run]
# Source will be added when backend/ is created in Phase 1
# source = ["backend"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
